<resources>
    <string name="app_name">NShortcutBugs</string>

    <string name="activity_main1">NShortcut 1</string>
    <string name="activity_sub1">Sub Activity 1</string>
    <string name="activity_enabled_bool">Enabled by boolean resource</string>
    <string name="activity_disabled_bool">Disabled by boolean resource</string>

    <string name="activity_main2">NShortcut 2</string>
    <string name="activity_sub2">Sub Activity 2</string>

    <string name="activity_shortcutmanager_debug">ShortcutManager debug</string>
    <string name="activity_preferences_debug">Preferences debug</string>

    <string name="shortcut_main2_uri_label">Github link</string>
    <string name="shortcut_main2_uri_link">https://github.com/rockgecko-development/NShortcutBugs</string>
    <string name="shortcut_main2_chrome_package">com.android.chrome</string>
    <string name="shortcut_main2_chrome_target_class">com.google.android.apps.chrome.Main</string>
</resources>
