<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" tools:targetApi="n_mr1">

    <shortcut
        android:shortcutId="main2"
        android:enabled="true"
        android:icon="@drawable/ic_home_white_36dp"
        android:shortcutShortLabel="@string/activity_main2"
        android:shortcutLongLabel="@string/activity_main2"
        >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.rockgecko.nshortcutbugs.flavour1"
            android:targetClass="com.rockgecko.nshortcutbugs.MainActivity2" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="main2_sub2"
        android:enabled="true"
        android:icon="@drawable/ic_view_list_white_36dp"
        android:shortcutShortLabel="@string/activity_sub2"
        android:shortcutLongLabel="@string/activity_sub2"
        >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.rockgecko.nshortcutbugs.flavour1"
            android:targetClass="com.rockgecko.nshortcutbugs.MainActivity2" />
        <!-- Action Launcher issue: On pressing back, MainActivity2 should appear -->
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.rockgecko.nshortcutbugs.flavour1"
            android:targetClass="com.rockgecko.nshortcutbugs.SubActivity2" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:shortcutId="main2_uri"
        android:enabled="true"
        android:icon="@drawable/ic_github_circle_36dp"
        android:shortcutShortLabel="@string/shortcut_main2_uri_label"
        android:shortcutLongLabel="@string/shortcut_main2_uri_label"
        >
        <!-- Android issue 226188: data uris also do not work as string resources -->
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/shortcut_main2_uri_link"
             />

        <categories android:name="android.shortcut.conversation" />
    </shortcut>

</shortcuts>